<resources>
    <string name="app_name">SMS</string>
    <string name="App_full">Student Management System</string>
    <string name="admin">Admin</string>
    <string name="student">Student</string>
    <string name="btn_login">Login</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_forgot_password">forgot Password</string>
    <string name="Insti_Password">Institute Password</string>
    <string name="admin_email">Email</string>
    <string name="admin_password">Password</string>
    <string name="student_email">Email</string>
    <string name="student_password">Password</string>
    <string name="view_all">View All Student</string>
    <string name="add_stud">Add Student</string>
    <string name="update_stud">Update Student</string>
    <string name="delete_stud">Delete_Student</string>
    <string name="logout">Logout</string>
    <string name="username">username</string>
    <string name="address">Address</string>
    <string name="phoneno.">Phone No</string>
    <string name="sem">Semester</string>
    <string name="Subpro">Submit and Proceed</string>
    <string name="choosesem">Choose sem</string>
    <string name="edit_basic">Edit Basic Info</string>
    <string name="edit_result">Add or Edit Result Details</string>
    <string name="fees_details">Update or Edit Fees Details</string>
    <string name="notification">Message to Students</string>
    <string name="cgpa">GPA on scale of 10</string>
    <string name="submit_gpa">Submit Result</string>
    <string name="total_amount">Total Amout</string>
    <string name="Due_amount">Due Amount</string>
    <string name="Fees_status">Fees Status Message</string>
    <string name="submit_fees">Submit Fees Details</string>
    <string name="view_basic">View Basic Details</string>
    <string name="view_result">View Result</string>
    <string name="view_fees">View fees details</string>
    <string name="view_attendece">View Attendance</string>
    <string name="view_timetable">View Time Table</string>
    <string name="view_Message">View Message from Teacher</string>
    <string name="view_fees_details">View fees Details</string>


    <string-array name="sem_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

</resources>
