<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sachin.sms.Admin.studnent_details.Update_main">
    <Button
        android:id="@+id/edit_basic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_basic"
        />

    <Button
        android:id="@+id/update_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_result"
        android:layout_marginTop="@dimen/logo_w_h"/>

    <Button
        android:id="@+id/update_fees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fees_details"
        android:layout_marginTop="200dp"/>

    <Button
        android:id="@+id/notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:layout_marginTop="300dp"/>

</RelativeLayout>
