<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#1DE9B6"
    tools:context="com.example.sachin.sms.Admin.admin_singin">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="@dimen/logo_w_h"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="@dimen/fab_margin"
            android:contentDescription="?android:attr/candidatesTextStyleSpans"
            android:text="Admin SignIn"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/admin_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/admin_email" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/admin_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/admin_password" />
        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/admin_login_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:background="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"/>

        <Button android:id="@+id/admin_gosignup_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_signup"
            android:background="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"/>

        <Button android:id="@+id/admin_forgot_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_forgot_password"
            android:background="@color/colorPrimary"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white"/>





    </LinearLayout>

</RelativeLayout>
