<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    tools:context="com.example.sachin.sms.Student.View_basic">

    <TableRow
        android:padding="5dip">

     <TextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_span="2"
         android:gravity="center_horizontal"
         android:text="@string/view_basic"
         android:textColor="#0bb"
         android:textSize="25sp"
         android:textStyle="bold"
         />

    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="Name"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/stud_name"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="15dp"
            android:textSize="16sp"
            />
    </TableRow>



    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="Username"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/stud_username"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="15dp"
            android:textSize="16sp"
            />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/student_email"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/stud_email"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="15dp"
            android:textSize="16sp"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/sem"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/stud_semester"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="15dp"
            android:textSize="16sp"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/address"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/stud_address"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="15dp"
            android:textSize="16sp"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:text="@string/phoneno."
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/stud_mobile"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginLeft="15dp"
            android:textSize="16sp"
            />
    </TableRow>

</TableLayout>
